--- a/src/hexo/themes/documentation/source/core/css/type.css
+++ b/src/hexo/themes/documentation/source/core/css/type.css
@@ -39,7 +39,8 @@ button,
 .subheading,
 .title,
 .subtitle,
-.subtitle--alt {
+.subtitle--alt,
+.button {
     font-family: "Montserrat", sans-serif;
 }
 
